--- a/app/assets/stylesheets/modules/_calendar.scss
+++ b/app/assets/stylesheets/modules/_calendar.scss
@@ -2,27 +2,29 @@
   background-color: white;
   max-width: 800px;
   margin: 10px auto;
-  box-shadow: 1px 1px 5px rgb(136, 136, 136);
-  border: 1px solid black;
   padding: 5px 10px 10px;
+  box-shadow: 1px 1px 5px gray;
+  border: 1px solid black;
+
   .calendar-heading {
     text-align: center;
 
     &__year {
       font-size: 14px;
     }
+
     &__month {
       display: flex;
       justify-content: center;
-      font-size: 20px;
       margin-top: -5px;
+      font-size: 20px;
 
       .this-month {
         margin: 0 40px;
       }
 
       .month-btn {
-        color: rgb(0, 91, 165);
+        color: $dark_blue;
       }
     }
   }
@@ -39,33 +41,38 @@
     }
     
     thead th {
+      border: 1px solid #333333;
       text-align: center;
-      border: 1px solid #333333;
     }
+
     td {
-      border: 1px solid #333333;
       padding: 0;
+      border: 1px solid #333333;
       :hover {
         border: 3px solid lightskyblue
       }
     }
+
     .day {
+      position: relative;
       height: 110px;
       padding: 0 2px;
-      position: relative;
       font-size: 13px;
       :hover {
         border: none;
       }
+
       .edit_link {
         position: absolute;
         right: 5px;
       }
+
       .new_task_link {
-        height: 90px;
         width: 100%;
+        height: 90px;
         cursor: pointer;
       }
+
       .holiday_name {
         color: lightcoral;
         width: 100%;
@@ -73,49 +80,54 @@
         line-height: 13px;
         overflow: scroll;
       }
+
       .task_body {
         position: absolute;
         top: 35px;
-        height: 70px;
         width: 100%;
+        height: 70px;
         word-wrap: break-word;
         overflow: scroll;
       }
+
       .task-icon {
         position: absolute;
         top: 20px;
         left: 50%;
         transform : translateX(-50%);
-        text-align: center;
-        font-size: 90px;
         width: 100%;
+        font-size: 90px;
+        text-align: center;
         overflow: hidden;
 
         &--check {
           color: greenyellow;
           opacity: 0.7;
         }
+
         &--bad {
           color: red;
           opacity: 0.6;
         }
+
         &--hidden {
           opacity: 0;
         }
       }
+
       .good-job {
         background-color: white;
-        display: flex;
-        padding: 0 3px;
-        margin-top: 2px;
         position: absolute;
         top: 0;
         right: 2px;
+        display: flex;
+        margin-top: 2px;
+        padding: 0 3px;
         border: 1px solid;
         border-radius: 15px;
 
         &--on {
-          color: rgb(252, 77, 135);
+          color: $good_job_red;
         }
 
         &--off {
@@ -123,11 +135,11 @@
         }
         
         &__btn {
-          margin-right: 2px;
           margin-top: 1px;
+          margin-right: 2px;
           font-size: 14px;
-          
         }
+
         &__count {
           font-size: 12px;
         }
@@ -138,12 +150,13 @@
   .today {
     background-color: white;
     position: relative;
+    
     .today-circle {
+      background-color: rgba(255, 0, 0, 0.3);
       position: absolute;
-      padding: 1px 6px 0;
       top: 0;
       left: 0;
-      background-color: rgba(255, 0, 0, 0.3);
+      padding: 1px 6px 0;
       border-radius: 50%;
       border: 1px solid rgb(255, 116, 116);
     }
@@ -152,22 +165,10 @@
   .wday-0 {
     background-color: rgb(255, 240, 250);
   }
-  .wday-1 {}
-  .wday-2 {}
-  .wday-3 {}
-  .wday-4 {}
-  .wday-5 {}
+
   .wday-6 {
     background-color: rgb(234, 242, 255);
   }
-
-  
-  .past {
-    
-  }
-  .future {}
-
-  .start-date {}
 
   .prev-month {
     background-color: lightgray;
@@ -177,9 +178,6 @@
     background-color: lightgray;
     opacity: 0.4;
   }
-  .current-month {}
-
-  .has-events {}
 }
 
 
