--- a/app/assets/stylesheets/modules/_common.scss
+++ b/app/assets/stylesheets/modules/_common.scss
@@ -8,19 +8,19 @@ a {
 }
 
 header {
-  background-color: rgb(0, 91, 165,);
-  opacity: 0.98;
+  background-color: $dark_blue;
+  position: fixed;
+  z-index: 10;
+  top: 0;
   width: 100%;
   height: 40px;
-  position: fixed;
-  top: 0;
-  z-index: 10;
+  opacity: 0.98;
   
   .nav-bar {
     display: flex;
+    justify-content: space-between;
     text-align: center;
     line-height: 40px;
-    justify-content: space-between;
 
     #logo {
       color: white;
@@ -42,12 +42,12 @@ header {
 }
 
 #modal-wrapper {
+  background-color: rgb(51, 50, 50);
   position: fixed;
   z-index: 15;
-  background-color: rgb(51, 50, 50);
-  opacity: 0.5;
   width: 100%;
   height: 100%;
+  opacity: 0.5;
   display: none;
 }
 
