--- a/app/assets/stylesheets/modules/_tasks.scss
+++ b/app/assets/stylesheets/modules/_tasks.scss
@@ -3,15 +3,15 @@
 }
 
 .task-list {
+  max-width: 800px;
   margin: 0 auto;
   padding: 0 20px;
-  max-width: 800px;
 }
 
 .task-show-window {
+  max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  max-width: 800px;
 }
 
 .praise_task-window {
@@ -20,74 +20,73 @@
 
 .task {
   background-color: white;
-  border: 1px solid lightskyblue;
-  box-shadow: 1px 1px 3px lightslategray;
-  margin-bottom: 20px;
-  padding: 10px 10px 0;
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 220px;
   width: 100%;
-  position: relative;
+  height: 220px;
+  margin-bottom: 20px;
+  padding: 10px 10px 0;
+  border: 1px solid lightskyblue;
+  box-shadow: 1px 1px 3px lightslategray;
 
   .task-menu {
-    font-size: 20px;
-    
-    display: flex;
     position: absolute;
     top: 0;
     left: 10px;
+    display: flex;
     align-items: center;
+    font-size: 20px;
 
     #task-edit-icon {
-      color: rgb(0, 0, 146);
+      color: $dark_blue;
       margin-right: 5px;
       cursor: pointer;
     }
+
     #task-delete-icon {
-      color: rgb(0, 0, 146);
+      color: $dark_blue;
     }
   }
 
   .task-link {
     position: absolute;
-    height: 100%;
-    width: 100%;
+    z-index: 1;
     top: 0;
     left: 0;
-    z-index: 1;
+    width: 100%;
+    height: 100%;
   }
 
   .task-date {
-    font-size: 12px;
     position: absolute;
     top: 3px;
     right: 10px;
+    font-size: 12px;
   }
 
   &__left {
     width: 125px;
 
     .user-info {
-      text-align: center;
-      padding: 10px;
-      z-index: 2;
       position: absolute;
+      z-index: 2;
       top: 35px;
       left: 20px;
+      padding: 10px;
+      text-align: center;
 
       &--link:hover {
         background-color: rgb(236, 248, 255);
         border-radius: 5px;
       }
-      &__name {
-      }
+
       &__image {
-        margin: 0 auto;
         background-color: white;
-        height: 100px;
         width: 100px;
+        height: 100px;
+        margin: 0 auto;
         border-radius: 50%;
         border: 1px solid lightskyblue;
         
@@ -99,32 +98,32 @@
   }
 
   &__right {
-    width: 80%;
     background-color: white;
+    width: 80%;
     border: 1px solid lightskyblue;
 
     .task__main {
-      padding: 10px 0 0 10px;
       display: flex;
+      padding: 10px 0 0 10px;
 
       &__left-box {
         background-color: white;
-        border: 1px solid lightskyblue;
-        width: 25%;
-        margin-bottom: 10px;
-        height: 150px;
         position: relative;
+        width: 25%;
+        height: 150px;
+        margin-bottom: 10px;
+        border: 1px solid lightskyblue;
 
         .date {
           font-size: 16px;
         }
         .score-icon {
-          font-size: 100px;
-          width: 100px;
           position: absolute;
           top: 30px;
           left: 50%;
           transform : translateX(-50%);
+          width: 100px;
+          font-size: 100px;
           text-align: center;
           overflow: hidden;
           
@@ -137,39 +136,41 @@
             opacity: 0.6;
           }
         }
+
         .body {
           position: absolute;
           top: 25px;
-          height: 125px;
           width: 100%;
+          height: 125px;
           overflow: scroll;
           word-wrap: break-word;
         }
       }
 
       &__right-box {
-        width: 75%;
-        margin-left: 10px;
         display: flex;
         flex-flow: column;
         justify-content: space-between;	
+        width: 75%;
+        margin-left: 10px;
 
         .routine-list {
-          border: 1px solid lightskyblue;
           max-height: 140px;
-          padding: 10px 10px 0;
           margin-right: 10px;
+          padding: 10px 10px 0;
+          border: 1px solid lightskyblue;
           ::-webkit-scrollbar {
             display: none;
           }
+
           .routine {
             background-color: rgb(238, 252, 255);;
-            box-shadow: 1px 1px 3px lightslategray;
-            border: 1px solid lightskyblue;
             height: 30px;
-            line-height: 28px;
             margin-bottom: 10px;
             padding-left: 10px;
+            box-shadow: 1px 1px 3px lightslategray;
+            border: 1px solid lightskyblue;
+            line-height: 28px;
             overflow-x: scroll;
             white-space: nowrap;
 
@@ -179,9 +180,10 @@
             }
           }
         }
+
         .praise-content {
-          margin: 5px 5px 5px auto;
           z-index: 2;
+          margin: 5px 5px 5px auto;
           
           .good-job {
             display: flex;
@@ -192,16 +194,20 @@
             &:hover {
               opacity: 0.7;
             }
+
             &--on {
-              color: rgb(252, 77, 135);
+              color: $good_job_red;
             }
+
             &--off {
               color: lightskyblue;
             }
+
             &__btn {
               margin-right: 5px;
               font-size: 18px;
             }
+
             &__count {
               font-size: 16px;
             }
@@ -215,21 +221,23 @@
 #reaction-menu {
   display: flex;
   justify-content: center;
-  border-bottom: 1px solid rgb(119, 119, 119);
+  border-bottom: 1px solid $border_gray;
   padding-bottom: 5px;
 
   i {
     margin-right: 5px;
   }
+
   .praise-tab {
+    color: lightgray;
     display: flex;
     margin-left: 100px;
-    color: lightgray;
     cursor: pointer;
   }
+
   .comment-tab {
-    display: flex;
     color: lightgray;
+    display: flex;
     cursor: pointer;
   }
 
@@ -238,32 +246,35 @@
   }
   
 }
+
 #reaction-contents {
-  margin-top: 20px;
   width: 100%;
   height: 600px;
-  border: 1px solid rgb(119, 119, 119);
+  margin-top: 20px;
+  border: 1px solid $border_gray;
   
   #comments-window {
     
     #comment-top {
-      padding: 10px 20px;
       background-color: rgb(241, 241, 241);
+      padding: 10px 20px;
       
       form {
         display: flex;
         justify-content: space-between;
         
         textarea {
-          resize: none;
           width: 80%;
           margin-right: 20px;
+          padding: 5px;
+          resize: none;
         }
+
         input {
-          border-style: none;
           background-color: rgb(95, 189, 248);
           color: white;
           width: 20%;
+          border-style: none;
           cursor: pointer;
           &:hover {
             background-color: lightskyblue;
@@ -271,17 +282,18 @@
         }
       }
     }
+
     #comments-index {
-      border-top: 1px solid rgb(119, 119, 119);
-      overflow-y: scroll;
       height: 500px;
       padding: 10px 20px 10px;
+      border-top: 1px solid $border_gray;
+      overflow-y: scroll;
 
       .comment-box {
-        width: 80%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        width: 80%;
 
         .comment-date {
           margin: 0 0 0 auto;
@@ -290,13 +302,15 @@
       }
     }
   }
+
   #praised_user-window {
-    padding: 20px;
     height: 600px;
+    padding: 20px;
+    
     #praised_user-box {
-      overflow-y: scroll;
       width: 100%;
       height: 100%;
+      overflow-y: scroll;
     }
   }
 }
