--- a/app/assets/stylesheets/modules/_user_index.scss
+++ b/app/assets/stylesheets/modules/_user_index.scss
@@ -1,20 +1,21 @@
 .user-list {
+  max-width: 700px;
   margin: 0 auto;
   padding: 0 20px;
-  max-width: 700px;
 }
 
 .user-list-window {
   padding-top: 220px;
 }
+
 .user {
   background-color: white;
-  border: 1px solid lightskyblue;
-  box-shadow: 1px 1px 3px lightslategray;
-  margin-bottom: 20px;
-  padding: 10px 20px 10px 10px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
+  padding: 10px 20px 10px 10px;
+  box-shadow: 1px 1px 3px lightslategray;
+  border: 1px solid lightskyblue;
 
   &__left {
     width: 125px;
@@ -24,19 +25,17 @@
       text-align: center;
       
       &--link:hover {
-        background-color: rgb(236, 248, 255);
+        background-color: $light_skyblue;
         border-radius: 5px;
       }
-      &__name {
 
-      }
       &__image {
-        margin: 0 auto;
         background-color: white;
-        height: 100px;
         width: 100px;
-        border-radius: 50%;
+        height: 100px;
+        margin: 0 auto;
         border: 1px solid lightskyblue;
+        border-radius: 50%;
         
         img {
           border-radius: 50%;
@@ -46,26 +45,26 @@
   }
 
   &__right {
-    width: 75%;
     display: flex;
     flex-direction: column;
+    width: 75%;
 
     .routine-list {
-      border: 1px solid lightskyblue;
       width: 100%;
       max-height: 140px;
-      overflow-y: scroll;
       padding: 10px 10px 0;
+      border: 1px solid lightskyblue;
+      overflow-y: scroll;
 
       .routine {
         background-color: rgb(238, 252, 255);;
-        box-shadow: 1px 1px 3px lightslategray;
-        border: 1px solid lightskyblue;
         height: 30px;
-        line-height: 30px;
         margin-bottom: 10px;
         padding-left: 10px;
-
+        box-shadow: 1px 1px 3px lightslategray;
+        border: 1px solid lightskyblue;
+        line-height: 30px;
+        
         &--none {
           background-color: rgb(228, 228, 228);
           color: gray;
@@ -77,11 +76,11 @@
       margin: 0 0 10px auto;
 
       .follow-btn {
+        padding: 5px;
         border: 1px solid lightskyblue;
         border-radius: 25px;
-        padding: 5px;
-        line-height: 30px;
         font-size: 14px;
+        line-height: 30px;
         text-align: center;
         
         &--off {
@@ -90,11 +89,12 @@
             background-color: rgb(211, 238, 255);
           }
         }
+        
         &--on {
-          background-color: rgb(63, 179, 252);
+          background-color: $follow_blue;
           color: white;
           &:hover {
-            background-color: rgb(97, 192, 252);
+            background-color: $folow_blue_hover;
           }
         }
       }
