--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -1,3 +1,5 @@
+@import "mixin/mixin";
+
 .form {
   background-color: white;
   position: fixed;
@@ -26,9 +28,7 @@
     }
   }
   &__title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include line_up_side(space-between);
     margin: 0 20px 0;
     border-bottom: 1px solid lightsteelblue;
 
@@ -101,15 +101,11 @@
   }
 
   &--task {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include line_up_vertical;
     padding:20px 20px;
 
     &__title {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      @include line_up_side(space-between);
       width: 80%;
       margin-bottom: 20px;
       border-bottom: 1px solid lightsteelblue;
