--- a/app/assets/stylesheets/modules/_tasks.scss
+++ b/app/assets/stylesheets/modules/_tasks.scss
@@ -1,3 +1,5 @@
+@import "mixin/mixin";
+
 .jscroll {
   padding: 30px 0;
 }
@@ -21,9 +23,7 @@
 .task {
   background-color: white;
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @include line_up_side(space-between);
   width: 100%;
   height: 220px;
   margin-bottom: 20px;
