fixup! refactoring of scss files

--- a/app/assets/stylesheets/mixin/_mixin.scss
+++ b/app/assets/stylesheets/mixin/_mixin.scss
@@ -1,10 +1,16 @@
-@mixin line_up_side($justify-content: center) {
+@mixin line_up_side($justify-content) {
   display: flex;
   align-items: center;
   justify-content: $justify-content;
 }
 
-@mixin line_up_vertical {
+@mixin line_up_vertical($justify-content) {
+  display: flex;
+  flex-direction: column;
+  justify-content: $justify-content;
+}
+
+@mixin line_up_vertical_side-center {
   display: flex;
   flex-direction: column;
   align-items: center;
