--- a/app/assets/stylesheets/modules/_welcome.scss
+++ b/app/assets/stylesheets/modules/_welcome.scss
@@ -1,3 +1,5 @@
+@import "mixin/mixin";
+
 .home-title {
   background-color: rgb(95, 189, 247);
   color: white;
@@ -42,9 +44,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -30%);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  @include line_up_vertical(center);
   width: 500px;
   height: 400px;
   border: 2px solid rgb(36, 174, 253);
