--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -48,6 +48,19 @@
     }
   }
 
+  .login_message {
+    padding: 30px 20px 0;
+
+    h3 {
+      margin-bottom: 5px;
+    }
+
+    li {
+      list-style: square;
+      list-style-position:inside; 
+    }
+  }
+
   .field {
     color: gray;
     margin: 40px 20px;
