ad confirm message before logout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
           .menu-list
             = link_to "投稿一覧", tasks_path, class: "menu-list__menu"
             = link_to "マイページ", user_path(current_user), class: "menu-list__menu"
-            = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "menu-list__menu"
+            = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "menu-list__menu", data: { confirm: 'ログアウトしますか?' }
         - else
           .menu-list
             = link_to "新規登録", new_user_registration_path, class: "menu-list__menu"
