--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -241,10 +241,12 @@
 
 #new-routine {
   display: none;
+  @include category-select();
 }
 
 .edit-routine {
   display: none;
+  @include category-select();
 }
 
 .routine-actions {
