--- a/app/assets/stylesheets/mixin/_mixin.scss
+++ b/app/assets/stylesheets/mixin/_mixin.scss
@@ -15,3 +15,16 @@
   flex-direction: column;
   align-items: center;
 }
+
+@mixin category-select() {
+  lavel {
+    margin-left: 30px;
+  }
+
+  select {
+    background: none;
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
+  }
+}
