--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -167,6 +167,11 @@
             font-size: 18px;
             overflow-x: auto;
             white-space: nowrap;
+
+            i {
+              font-size: 16px;
+              margin: 0 3px;
+            }
           }
           &__start-date {
             width: 20%;
