--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -42,12 +42,17 @@
               .routine.routine--none
                 習慣が設定されていません
 
-          .praise-content.praise-btn{id: "praise-#{@task.id}"}
-            = render partial: "praise", locals: { task: @task }
+          .reaction-contents
+            .comment-content
+              = icon('far', 'comment-dots')
+              #comment-count
+                = @task.comments.count
+            .praise-content.praise-btn{id: "praise-#{@task.id}"}
+              = render partial: "praise", locals: { task: @task }
   
   #reaction-menu
     = link_to task_path(@task), class: "comment-tab selected" do
-      = icon('far', 'comments', class: "comment-icon")
+      = icon('far', 'comment-dots', class: "comment-icon")
       コメント
 
     = link_to praised_users_index_task_path(@task), class: "praise-tab" do
@@ -59,7 +64,7 @@
       #comment-top
         = form_with(model: [@task, @comment], local: true, id: "comment-form") do |f|
           = f.text_area :content, placeholder: "コメントする", rows: "2", maxlength: 200
-          = f.submit "SEND"
+          = f.submit "SEND", id: "comment-submit"
       #comments-index
         - @comments.each do |comment|
           .user
