--- a/app/assets/stylesheets/modules/_tasks.scss
+++ b/app/assets/stylesheets/modules/_tasks.scss
@@ -179,38 +179,52 @@
           }
         }
 
-        .praise-content {
-          z-index: 2;
+        .reaction-contents {
+          @include line_up_side(end);
           margin: 5px 5px 5px auto;
-          
-          .good-job {
-            display: flex;
-            padding: 2px 5px 0;
-            border: 1px solid;
-            border-radius: 15px;
+
+          .comment-content {
+            @include line_up_side(space-between);
+            padding: 2px 10px 0;
+            i {
+              margin-right: 3px;
+            }
+          }
+
+          .praise-content {
+            z-index: 2;
             
-            &:hover {
-              opacity: 0.7;
-            }
-
-            &--on {
-              color: $good_job_red;
-            }
-
-            &--off {
-              color: lightskyblue;
-            }
-
-            &__btn {
-              margin-right: 5px;
-              font-size: 18px;
-            }
-
-            &__count {
-              font-size: 16px;
+            .good-job {
+              display: flex;
+              padding: 2px 5px 0;
+              border: 1px solid;
+              border-radius: 15px;
+              
+              &:hover {
+                opacity: 0.7;
+              }
+  
+              &--on {
+                color: $good_job_red;
+              }
+  
+              &--off {
+                color: lightskyblue;
+              }
+  
+              &__btn {
+                margin-right: 5px;
+                font-size: 18px;
+              }
+  
+              &__count {
+                font-size: 16px;
+              }
             }
           }
         }
+
+        
       }
     } 
   }
