--- a/app/views/tasks/praised_users_index.html.haml
+++ b/app/views/tasks/praised_users_index.html.haml
@@ -42,12 +42,17 @@
               .routine.routine--none
                 習慣が設定されていません
 
-          .praise-content.praise-btn{id: "praise-#{@task.id}"}
-            = render partial: "praise", locals: { task: @task }
+          .reaction-contents
+            .comment-content
+              = icon('far', 'comment-dots')
+              #comment-count
+                = @task.comments.count
+            .praise-content.praise-btn{id: "praise-#{@task.id}"}
+              = render partial: "praise", locals: { task: @task }
   
   #reaction-menu
     = link_to task_path(@task), class: "comment-tab" do
-      = icon('far', 'comments', class: "comment-icon")
+      = icon('far', 'comment-dots', class: "comment-icon")
       コメント
 
     = link_to praised_users_index_task_path(@task), class: "praise-tab selected" do
