--- a/app/assets/stylesheets/modules/_tasks.scss
+++ b/app/assets/stylesheets/modules/_tasks.scss
@@ -185,6 +185,7 @@
 
           .comment-content {
             @include line_up_side(space-between);
+            color: #333333;
             padding: 2px 10px 0;
             i {
               margin-right: 3px;
