--- a/app/views/tasks/category_index.html.haml
+++ b/app/views/tasks/category_index.html.haml
@@ -1,11 +1,14 @@
-#seach-box
-  %p カテゴリー検索
-  #category_box
-    = link_to root_path do
+#search-menu
+#category-box
+  #category-box__title
+    %p カテゴリー検索
+    = icon("fa", "chevron-down")
+  #category-box__list
+    = link_to root_path, class:"category-box__list__menu" do
       = icon("fa", "#{Category.first.icon}")
       = "全て"
     - Category.where.not(id: 0).each do |c|
-      = link_to "/tasks/category/#{c.id}" do
+      = link_to "/tasks/category/#{c.id}", class:"category-box__list__menu" do
         = icon("fa", "#{c.icon}")
         = c.name
 .jscroll
