--- a/app/views/tasks/category_index.html.haml
+++ b/app/views/tasks/category_index.html.haml
@@ -1,7 +1,7 @@
 #search-menu
 #category-box
   #category-box__title
-    %p カテゴリー検索
+    = "カテゴリー：#{@category_name}"
     = icon("fa", "chevron-down")
   #category-box__list
     = link_to root_path, class:"category-box__list__menu" do
