hide duplicate records

--- a/app/views/tasks/category_index.html.haml
+++ b/app/views/tasks/category_index.html.haml
@@ -17,48 +17,5 @@
       #none-message
         = "#{@category_name}カテゴリーの投稿はまだありません"
     - else
-      - @routine_logs.each do |log|
-        .task
-          .task-date
-            = log.task.created_at.strftime('%Y/%-m/%-d %-H:%M')
-          = link_to task_path(log.task), class: "task-link" do
-            .task__left
-              = link_to user_path(log.task.user_id) do
-                .user-info.user-info--link
-                  .user-info__name
-                    = log.task.user.name
-                  .user-info__image
-                    = image_tag log.task.user.image.url
-
-            .task__right
-              .task__main
-                .task__main__left-box
-                  .date
-                    = log.task.date.strftime('%-m月%-d日')
-
-                  - if log.task.score == "done"
-                    = icon('fa', 'check', class: "score-icon score-icon--done")
-                  - else log.task.score == "bad"
-                    = icon('fa', 'times', class: "score-icon score-icon--bad")
-
-                  .body
-                    = simple_format log.task.body
-
-                .task__main__right-box
-                  .routine-list
-                    - if log.task.routine_logs.length > 0
-                      - log.task.routine_logs.each do |r|
-                        .routine
-                          = icon('fa', "#{r.category.icon}")
-                          = r.content
-                    - else 
-                      .routine.routine--none
-                        習慣が設定されていません
-                  .reaction-contents
-                    .comment-content
-                      = icon('far', 'comment-dots')
-                      #comment-count
-                        = log.task.comments.count
-                    .praise-content{id: "praise-#{log.task.id}"}
-                      = render partial: "praise", locals: { task: log.task } if user_signed_in?
-  = paginate @routine_logs
+      = render "posts", tasks: @tasks
+      = paginate @tasks
