--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -50,14 +50,13 @@
         }
 
         &__img {
-          background-color: white;
           width: 100px;
           height: 100px;
           margin: 0 auto;
-          border-radius: 50%;
-          border: 1px solid lightskyblue;
 
           img {
+            display: block;
+            margin: 0 auto;
             border-radius: 50%;
           }
         }
