fixup! fixup! updates layouts

--- a/app/views/routines/_new_form.html.haml
+++ b/app/views/routines/_new_form.html.haml
@@ -8,5 +8,5 @@
   .field
     %lavel カテゴリー：
     = f.collection_select :category_id, Category.all, :id, :name
-  .routine-actions
-    = f.submit "SEND", id: "edit-routine-submit"
+  .actions
+    = f.submit "SEND", id: "edit-routine-submit", class: "submit-btn"
