--- a/app/views/tasks/_posts.html.haml
+++ b/app/views/tasks/_posts.html.haml
@@ -4,7 +4,7 @@
       = task.created_at.strftime('%Y/%-m/%-d %-H:%M')
     = link_to task_path(task), class: "task-link" do
       .task__left
-        = link_to user_path(task.user_id) do
+        = link_to user_path(task.user_id), class:"user_path_link" do
           .user-info.user-info--link
             .user-info__name
               = task.user.name
