--- a/app/views/users/_routines_others.html.haml
+++ b/app/views/users/_routines_others.html.haml
@@ -1,8 +1,9 @@
 .routine-list
-  - @user.routines.each do |routine|
+  - @routines.each do |routine|
     .routine
       .routine__text-box
         .routine__text-box__content
+          = icon('fa', "#{routine.category.icon}")
           = routine.content
         .routine__text-box__start-date
           = "#{routine.created_at.strftime('%Y/%m/%d')} 開始"
