--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -29,7 +29,7 @@
 
   %input{type: "hidden", value: Date.today, id: "date-today"}
 
-  - if @user.routines.count < 3
+  - if @routines.count < 3
     #new-routine.form
       = render partial: "routines/new_form", locals: { routine: @routine }
 
