通知一覧へのリンク追加

--- a/app/assets/stylesheets/modules/_common.scss
+++ b/app/assets/stylesheets/modules/_common.scss
@@ -37,6 +37,11 @@ header {
         margin-right: 20px;
         
       }
+
+      .bell-mark {
+        font-size: 20px;
+        margin-left: -5px;
+      }
     }
   }
 }
