create notifications_index view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,5 +10,6 @@
 @import "modules/user_index";
 @import "modules/calendar";
 @import "modules/flash";
+@import "modules/notifications";
 @import "font-awesome-sprockets";
 @import "font-awesome";
