indicate unchecked notifications

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,8 @@
             = link_to "マイページ", user_path(current_user), class: "menu-list__menu"
             = link_to notifications_path, class: "menu-list__menu bell-mark" do
               = icon('far', 'bell')
+              - if unchecked_notifications.any?
+                .notice-circle
             = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "menu-list__menu", data: { confirm: 'ログアウトしますか?' }
         - else
           .menu-list
