--- a/app/assets/stylesheets/modules/_common.scss
+++ b/app/assets/stylesheets/modules/_common.scss
@@ -39,8 +39,19 @@ header {
       }
 
       .bell-mark {
+        position: relative;
         font-size: 20px;
         margin-left: -5px;
+
+        .notice-circle {
+          position: absolute;
+          background-color: lime;
+          top: 8px;
+          left: 15px;
+          width: 8px;
+          height: 8px;
+          border-radius: 50%;
+        }
       }
     }
   }
