--- a/app/assets/stylesheets/modules/_notifications.scss
+++ b/app/assets/stylesheets/modules/_notifications.scss
@@ -64,5 +64,16 @@
         padding: 5px 5px 0;
       }
     }
+
+  }
+
+  nav.pagination {
+    display: block;
+    text-align: center;
+    padding-top: 15px;
+
+    span {
+      margin-right: 3px;
+    }
   }
 }
