--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -5,5 +5,6 @@
   .notifications-list__contents
     - if @notifications.exists?
       = render notifications
+      = paginate notifications
     - else
       %p 通知はありません
