--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,4 +1,10 @@
 #search-menu
+  #search-box
+    = search_form_for @q, url: tasks_path do |f|
+      = f.search_field :body_cont, class: "keyword-input", placeholder: "キーワードで検索"
+      = button_tag type: "submit" do
+        = icon('fas', 'search')
+
 #category-box
   #category-box__title
     %p カテゴリー：全て
